tests/testfiles/passing/invalid_identifiers/keyword_as_id_restrict.c
/* Keyword as identifier: restrict */
int main() {
    int restrict;
    restrict = 23;
}